--- a/Graphics-Town/for_students/grtown.html
+++ b/Graphics-Town/for_students/grtown.html
@@ -16,6 +16,6 @@ Graphics Town
 </header>
 <body>
     <h1>Graphics Town!</h1>
-    <script src="grtown.js" type="module"></script>
+    <script src="./grtown.js" type="module"></script>
 </body>
 </html>
