--- a/Graphics-Town/index.html
+++ b/Graphics-Town/index.html
@@ -8,15 +8,15 @@
 <title>Introduction | CS559: Workbook 11&#43;12</title>
 
 
-<link rel="stylesheet" href="/book.min.6c7317d2e8552a0ac3ea8fd4ba500c3dfb1cc9c74e7afd73eee6d729751fad30.css">
+<link rel="stylesheet" href="./book.min.6c7317d2e8552a0ac3ea8fd4ba500c3dfb1cc9c74e7afd73eee6d729751fad30.css">
 
 
 
 
-<link rel="icon" href="/favicon.png" type="image/x-icon">
+<link rel="icon" href="./favicon.png" type="image/x-icon">
 
 
-<link rel="alternate" type="application/rss+xml" href="/index.xml" title="CS559: Workbook 11+12" />
+<link rel="alternate" type="application/rss+xml" href="./index.xml" title="CS559: Workbook 11+12" />
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
@@ -56,8 +56,8 @@ https://github.com/alex-shpak/hugo-book
 
 <ul>
 <li><a href="/"><strong>Introduction</strong></a></li>
-<li><a href="/docs/hints/">Hints</a></li>
-<li><a href="/for_students/grtown.html">grtown.html</a></li>
+<li><a href="./docs/hints/">Hints</a></li>
+<li><a href="./for_students/grtown.html">grtown.html</a></li>
 </ul>
 
 
@@ -84,7 +84,7 @@ https://github.com/alex-shpak/hugo-book
     <div class="book-page">
       <header class="flex align-center justify-between book-header">
   <label for="menu-control">
-    <img src="/svg/menu.svg" alt="Menu" />
+    <img src="./svg/menu.svg" alt="Menu" />
   </label>
   <strong>Introduction</strong>
 </header>
@@ -253,7 +253,7 @@ In years prior to that, doing &ldquo;basic&rdquo; things (like adding texture ma
 
 <p>Read through the assignment, and plan what you want to make.</p>
 
-<p>There is also a page of <a href="/docs/hints/">hints</a>.</p>
+<p>There is also a page of <a href="./docs/hints/">hints</a>.</p>
 </article>
 
       
