--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                                 </a>
                                 <a href="/Graphics-Town/index.html"><i class="fa fa-chain"></i></a> <!-- change # with your url to link it to another page -->
                             </div> 
-                            <img src="./img/portfolio/01.png" class="img-responsive" alt="Image"> <!-- Portfolio Image -->
+                            <img src="img/portfolio/01.png" class="img-responsive" alt="Image"> <!-- Portfolio Image -->
                         </div>
                     </div>
                 </div><!-- end Works #1 col 3 -->
