--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                                 <a title="Logo Identity Design" href="img/portfolio/01.png" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/portfolio/01.png">
                                     <i class="fa fa-expand"></i>
                                 </a>
-                                <a href="/Graphics-Town/index.html"><i class="fa fa-chain"></i></a> <!-- change # with your url to link it to another page -->
+                                <a href="/Graphics-Town/for_students/grtown.html"><i class="fa fa-chain"></i></a> <!-- change # with your url to link it to another page -->
                             </div> 
                             <img src="img/portfolio/01.jpg" class="img-responsive" alt="Image"> <!-- Portfolio Image -->
                         </div>
